test/typeerrors/ex22.golden
Building file ../test/typeerrors/ex22.act
  Compiling ex22.act for development

ERROR: Error when compiling ex22 module: Type error

  |
1 |f : [A(Plus)] => (A) -> A
  |^

  |
3 |def f(x,y):
4 |    return x
  |
Type incompatibility between signature for and definition of f (too few argument(s) in call)

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

